intel/bench_214_work/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main/log.txt
bench_214_work/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main.c:21:17: error: cannot initialize a variable of type 'const char *' with an rvalue of type 'void *'
    const char *region = NULL;
                ^        ~~~~
2 errors generated.
HLS FPGA Parse FAILED.
